1.20.X compatibility